@@ -5,6 +5,7 @@ Changelog
 -----------------------
  * Bug fix: redirect to @@edit_aggregated instead of edit_aggregated after title edit in indicator [tiberich]
  * Feature: link to @@ims_timeline and @@ims_overview from the readiness portlet [tiberich #4045]
+ * Bug fix: show ims content with missing setcodes in @@ims_timeline [tiberich #4053]
 
 1.33 - (2011-01-14)
 -------------------
